small fix bottom nav on mobile

--- a/app/source/sass/modules/_m-header.sass
+++ b/app/source/sass/modules/_m-header.sass
@@ -86,6 +86,8 @@
   z-index: 100
   .m-actions
     line-height: 60px
+    position: relative
+    z-index: 10
 
 .sticky-wrapper
   #slideText
